force-app/main/default/objects/Patient_Journey__c/Patient_Journey__c.object-meta.xml
<CustomObject>
    <label>Patient Journey</label>
    <nameField>
        <displayFormat>PJ-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Journey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>