force-app/main/default/objects/Patient_Journey__c/fields/Chain_of_Identity__c.field-meta.xml
<CustomField>
    <fullName>Chain_of_Identity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chain of Identity</label>
    <referenceTo>Chain_of_Identity__c</referenceTo>
    <relationshipLabel>Patient Journey</relationshipLabel>
    <relationshipName>Patient_Journey</relationshipName>
    <type>Lookup</type>
</CustomField>