force-app/main/default/objects/Patient_Journey__c/fields/Clinical_Site__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Clinical Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Journey</relationshipLabel>
    <relationshipName>Patient_Journey</relationshipName>
    <type>Lookup</type>
</CustomField>