force-app/main/default/objects/Patient_Journey__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <label>COI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>