force-app/main/default/objects/Patient_Journey__c/fields/COI_Generation_Date__c.field-meta.xml
<CustomField>
    <fullName>COI_Generation_Date__c</fullName>
    <label>COI Generation Date</label>
    <type>DateTime</type>
</CustomField>