force-app/main/default/objects/Patient_Journey__c/fields/Disease__c.field-meta.xml
<CustomField>
    <fullName>Disease__c</fullName>
    <label>Disease</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breast Cancer</fullName>
            </value>
            <value>
                <fullName>HNSCC</fullName>
            </value>
            <value>
                <fullName>Pancreatic Adenocarcinoma</fullName>
            </value>
            <value>
                <fullName>Colorectal Adenocarcinoma</fullName>
            </value>
            <value>
                <fullName>NSCLC</fullName>
            </value>
            <value>
                <fullName>Ovarian Cancer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>