force-app/main/default/objects/Patient_Journey__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient_Registration__c</referenceTo>
    <relationshipLabel>Patient Journey</relationshipLabel>
    <relationshipName>Patient_Journey</relationshipName>
    <type>Lookup</type>
</CustomField>