force-app/main/default/objects/Patient_Journey__c/fields/QC_Completion__c.field-meta.xml
<CustomField>
    <fullName>QC_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QC Completion</label>
    <type>Checkbox</type>
</CustomField>