force-app/main/default/objects/Patient_Journey__c/fields/Study_Definition__c.field-meta.xml
<CustomField>
    <fullName>Study_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Definition</label>
    <referenceTo>Study_Protocol__c</referenceTo>
    <relationshipLabel>Patient Journey</relationshipLabel>
    <relationshipName>Patient_Journey</relationshipName>
    <type>Lookup</type>
</CustomField>