force-app/main/default/objects/Patient_Journey__c/fields/Study_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Study_Definition__r.Id , Study_Definition__r.Display_Name__c, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Protocol</label>
    <type>Text</type>
</CustomField>