force-app/main/default/objects/Patient_Journey__c/fields/Subject_ID__c.field-meta.xml
<CustomField>
    <fullName>Subject_ID__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Patient__r.Id, Patient__r.Subject_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject ID</label>
    <type>Text</type>
</CustomField>