force-app/main/default/objects/Patient_Journey__c/fields/Year_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Birth__c</fullName>
    <formula>Patient__r.Year_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Birth</label>
    <type>Text</type>
</CustomField>