force-app/main/default/objects/Patient_Journey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject_ID__c</columns>
    <columns>Study_Protocol__c</columns>
    <columns>Current_Stage__c</columns>
    <columns>COI__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>